[gd_scene load_steps=5 format=3 uid="uid://bnrjsjvi14761"]

[ext_resource type="Script" path="res://tile.gd" id="1_dayq6"]
[ext_resource type="Texture2D" uid="uid://lanryyxlok1s" path="res://ground.png" id="2_kqmjg"]
[ext_resource type="Texture2D" uid="uid://urunpdhf6i7u" path="res://lava.png" id="3_dbham"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g4v7k"]
size = Vector2(64, 64)

[node name="Tile" type="Area2D"]
script = ExtResource("1_dayq6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_g4v7k")

[node name="WaitTimer" type="Timer" parent="."]
one_shot = true

[node name="Node" type="Node" parent="."]

[node name="Ground" type="Sprite2D" parent="."]
texture = ExtResource("2_kqmjg")

[node name="Lava" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_dbham")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_timer_timeout"]
